--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,15 @@
 .Rapp.history
 .DS_Store
 analysis/figure
-analysis/*png
-analysis/*html
-analysis/*_cache
+analysis/cache
 analysis/site_libs
+data
+data/*
+output
+output/*
+renv
+!renv
+renv/**
+!renv/activate.R
+shiny
+shiny/*
